--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,19 @@
     --bg-secondary-hover: #d1d5db; /* Cinza claro */
     --color-text: #000000; /* Texto escuro */
   }
+
+  body {
+    font-family: 'Roboto', sans-serif;
+    background-color: var(--bg-primary);
+    color: var(--color-text);
+    
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
+  }
+
+  
