--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     --bg-primary: #06415A; /* Cor escura */
     --bg-secondary: #12123c; /* Cor escura */
     --bg-secondary-hover: #1a1a56; /* Cor escura */
+    --bg-gray: #dbf4fb; /* Cinza claro */
     --color-text: #ffffff; /* Texto claro */
   }
   
